--- a/032002103陈楚钦.md
+++ b/032002103陈楚钦.md
@@ -46,11 +46,11 @@ Reporting	|报告		|60|60
  - 数据统计接口部分的性能改进。记录在数据统计接口的性能上所花费的时间，描述你改进的思路，并展示一张性能分析图（例如可通过VS2019/JProfiler的性能分析工具自动生成），并展示你程序中消耗最大的函数。
 使用pycharm自带的性能分析工具。
 
-  [外链图片转存失败,源站可能有防盗链机制,建议将图片保存下来直接上传
+
  - 每日热点的实现思路。简要介绍实现该功能的算法原理，可给出必要的步骤流程图、数学公式推导和核心代码实现，并简要谈谈所采用算法的优缺点与可能的改进方案。
     我不会做，想不明白，还在努力
  - 数据可视化界面的展示。在博客中介绍数据可视化界面的组件和设计的思路。
-
+![image](https://github.com/charlesccq/032002103-/blob/main/QQ%E6%88%AA%E5%9B%BE20220920171321.png)
 x轴为地区名，y轴为本土新增病例和本土无症状新增
 通过xlrd分析Excel数据，pyecharts构成柱状图
 ## 三、心得体会
